2013-02-09  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for passing along extra parameters to the
	`FB.login` API call (`FB_LOGIN`).

2013-01-30  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.9.0 released.

2013-01-29  Raymond Penners  <raymond.penners@intenct.nl>

	* account: `user_signed_up` signal now emits an optional
	`sociallogin` parameter so that receivers can easily differentiate
	between local and social signups.

2013-01-24  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added `email_removed` signal.

	* socialaccount: Populating of User model fields is now
	centralized in the adapter, splitting up `name` into `first_name`
	and `last_name` if these were not individually available.

2013-01-11  Raymond Penners  <raymond.penners@intenct.nl>

	* Ahmet Emre Aladağ contributed a Turkish translation, thanks!

	* socialaccount: Added SocialAccountAdapter hook to allow for
	intervention in social logins.

2013-01-07  Raymond Penners  <raymond.penners@intenct.nl>

	* google: support for Google's `verified_email` flag to determine
	whether or not to send confirmation e-mails.

2012-12-26  Raymond Penners  <raymond.penners@intenct.nl>

	* Fábio Santos contributed a Portugese translation, thanks!

2012-12-22  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added support for Stack Exchange.

2012-12-14  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: Added `get_social_accounts` template tag.

	* account: Default URL to redirect to after login can now be
	overriden via the adapter, both for login and e-mail confirmation
	redirects.

2012-12-06  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.8.3 released.

2012-11-27  Raymond Penners  <raymond.penners@intenct.nl>

	* Markus Thielen contributed a German translation, thanks!

2012-11-26  Raymond Penners  <raymond.penners@intenct.nl>

	* The `site` foreign key from `SocialApp` to `Site` has been