@@ -660,6 +660,32 @@ The behavior is as follows:
   address.
 
 
+Advanced Usage
+==============
+
+Invitations
+-----------
+
+Invitation handling is not supported, and most likely will not be any
+time soon. An invitation app could cover anything ranging from
+invitations of new users, to invitations of existing users to
+participate in restricted parts of the site. All in all, the scope of
+invitation handling is large enough to warrant being addressed in an
+app of its own.
+
+Still, everything is in place to easily hook up any third party
+invitation app. The account adapter
+(`allauth.account.adapter.DefaultAccountAdapter`) offers the following
+methods:
+
+- `is_open_for_signup(request)`. You can override this method to, for
+  example, inspect the session to check if an invitation was accepted.
+
+- `stash_email_verified(request, email)`. If an invitation was
+  accepted by following a link in a mail, then there is no need to
+  send e-mail verification mails after the signup is completed. Use
+  this method to record the fact that an e-mail address was verified.
+
 
 Showcase
 ========
