@@ -66,6 +66,15 @@ class DefaultAccountAdapter(object):
         else:
             return app_settings.EMAIL_CONFIRMATION_ANONYMOUS_REDIRECT_URL
 
+    def is_open_for_signup(self, request):
+        """
+        Checks whether or not the site is open for signups.
+
+        Next to simply returning True/False you can also intervene the
+        regular flow by raising an ImmediateHttpResponse
+        """
+        return True
+
 def get_adapter():
     return import_attribute(app_settings.ADAPTER)()
 
